--- a/style.css
+++ b/style.css
@@ -1,277 +1,265 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    font-family: 'Nunito', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+}
+.wrapper{
+  background: #171c24;
+  position: fixed;
+  width: 100%;
+}
+.wrapper nav{
+  position: relative;
+  display: flex;
+  max-width: calc(100% - 200px);
+  margin: 0 auto;
+  height: 70px;
+  align-items: center;
+  justify-content: space-between;
+}
+nav .content{
+  display: flex;
+  align-items: center;
+}
+nav .content .links{
+  margin-left: 80px;
+  display: flex;
+}
+.content .logo a{
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+}
+.content .links li{
+  list-style: none;
+  line-height: 70px;
+}
+.content .links li a,
+.content .links li label{
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 9px 17px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.content .links li label{
+  display: none;
+}
+.content .links li a:hover,
+.content .links li label:hover{
+  background: #323c4e;
+}
+.wrapper .search-icon,
+.wrapper .menu-icon{
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  line-height: 70px;
+  width: 70px;
+  text-align: center;
+}
+.wrapper .menu-icon{
+  display: none;
+}
+.wrapper #show-search:checked ~ .search-icon i::before{
+  content: "\f00d";
 }
 
-body{
-    background-color: #94D9EA;
+.wrapper .search-box{
+  position: absolute;
+  height: 100%;
+  max-width: calc(100% - 50px);
+  width: 100%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.wrapper #show-search:checked ~ .search-box{
+  opacity: 1;
+  pointer-events: auto;
+}
+.search-box input{
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  font-size: 17px;
+  color: #fff;
+  background: #171c24;
+  padding: 0 100px 0 15px;
+}
+.search-box input::placeholder{
+  color: #f2f2f2;
+}
+.search-box .go-icon{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  line-height: 60px;
+  width: 70px;
+  background: #171c24;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+}
+.wrapper input[type="checkbox"]{
+  display: none;
 }
 
-.main-content{
-    min-height: 100vh;
-    width: 80%;
-    margin: 2rem auto;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
+/* Dropdown Menu code start */
+.content .links ul{
+  position: absolute;
+  background: #171c24;
+  top: 80px;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+}
+.content .links li:hover > ul{
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease;
+}
+.content .links ul li a{
+  display: block;
+  width: 100%;
+  line-height: 30px;
+  border-radius: 0px!important;
+}
+.content .links ul ul{
+  position: absolute;
+  top: 0;
+  right: calc(-100% + 8px);
+}
+.content .links ul li{
+  position: relative;
+}
+.content .links ul li:hover ul{
+  top: 0;
 }
 
-.left-section{
-    grid-column: span 2;
+/* Responsive code start */
+@media screen and (max-width: 1250px){
+  .wrapper nav{
+    max-width: 100%;
+    padding: 0 20px;
+  }
+  nav .content .links{
+    margin-left: 30px;
+  }
+  .content .links li a{
+    padding: 8px 13px;
+  }
+  .wrapper .search-box{
+    max-width: calc(100% - 100px);
+  }
+  .wrapper .search-box input{
+    padding: 0 100px 0 15px;
+  }
+}
+
+@media screen and (max-width: 900px){
+  .wrapper .menu-icon{
+    display: block;
+  }
+  .wrapper #show-menu:checked ~ .menu-icon i::before{
+    content: "\f00d";
+  }
+  nav .content .links{
+    display: block;
+    position: fixed;
+    background: #14181f;
     height: 100%;
-    background-color: #00324A;
-}
-.right-section{
-    grid-column: span 5;
-    background-color: #f7f7f7;
-    height: 100%;
-}
-
-
-.left-content{
-    padding: 2rem 3rem;
-}
-.profile{
     width: 100%;
-    border-bottom: 1px solid #002333;
+    top: 70px;
+    left: -100%;
+    margin-left: 0;
+    max-width: 350px;
+    overflow-y: auto;
+    padding-bottom: 100px;
+    transition: all 0.3s ease;
+  }
+  nav #show-menu:checked ~ .content .links{
+    left: 0%;
+  }
+  .content .links li{
+    margin: 15px 20px;
+  }
+  .content .links li a,
+  .content .links li label{
+    line-height: 40px;
+    font-size: 20px;
+    display: block;
+    padding: 8px 18px;
+    cursor: pointer;
+  }
+  .content .links li a.desktop-link{
+    display: none;
+  }
+
+  /* dropdown responsive code start */
+  .content .links ul,
+  .content .links ul ul{
+    position: static;
+    opacity: 1;
+    visibility: visible;
+    background: none;
+    max-height: 0px;
+    overflow: hidden;
+  }
+  .content .links #show-features:checked ~ ul,
+  .content .links #show-services:checked ~ ul,
+  .content .links #show-items:checked ~ ul{
+    max-height: 100vh;
+  }
+  .content .links ul li{
+    margin: 7px 20px;
+  }
+  .content .links ul li a{
+    font-size: 18px;
+    line-height: 30px;
+    border-radius: 5px!important;
+  }
 }
 
-.image{
-    width: 100%;
-    text-align: center;
-}
-.profile img{
-    width: 100%;
-    border-radius: 50%;
-    border: 8px solid #002333;
-    
-}
-
-.name{
-    font-size: 2rem;
-    color: white;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding: 1.2rem 0;
-}
-
-.career{
-    font-size: 1.2rem;
-    color: #94D9EA;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding-bottom: 1rem;
-}
-
-.main-title{
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #f7f7f7ec;
-    padding-top: 3rem;
-}
-
-.contact-info ul{
-    padding-top: 2rem;
-}
-
-.contact-info ul li{
-    padding: .4rem 0;
-    display: flex;
-    align-items: center;
-    color: #718096;
-}
-.contact-info ul li i{
-    padding-right: 1rem;
-    font-size: 1.2rem;
-    color: #2D9CDB;
-}
-
-.skills-section ul{
-    padding-top: 2rem;
-}
-.skills-section ul li{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: .4rem 0;
-}
-
-.progress-bar{
-    width: 100%;
-    height: .4rem;
-    background-color: #2f81ed5b;
-    position: relative;
-    border-radius: 12px;
-}
-.progress{
-    height: 100%;
-    position: absolute;
-    left: 0;
-    background-color: #2D9CDB;
-    border-radius: 12px;
-}
-.js-progress{
-    width: 70%;
-}
-.ps-progress{
-    width: 90%;
-}
-.j-progress{
-    width: 85%;
-}
-.c-progress{
-    width: 40%;
-}
-.n-progress{
-    width: 63%;
-}
-.w-progress{
-    width: 78%;
-}
-
-
-.skill-title{
-    text-transform: uppercase;
-    color: #f7f7f7;
-    font-size: 1rem;
-}
-
-.sub-title{
-    padding-top: 2rem;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    color: #f7f7f7;
-}
-
-.sub-para{
-    color: #ccc;
-    padding: .4rem 0;
-}
-
-.references-section li{
-    color: #ccc;
-    padding: .2rem 0;
-}
-.references-section li i{
-    padding-right: .5rem;
-    font-size: 1.2rem;
-    color: #2D9CDB;
-}
-
-.right-main-content{
-    padding: 2rem 3rem;
-}
-
-
-.right-title{
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #2F80ED;
-    margin-bottom: 1.2rem;
-    position: relative;
-}
-
-.right-title::after{
-    content: "";
-    position: absolute;
-    width: 60%;
-    height: .2rem;
-    background-color: #ccc;
-    border-radius: 12px;
+@media screen and (max-width: 400px){
+  .wrapper nav{
+    padding: 0 10px;
+  }
+  .content .logo a{
+    font-size: 27px;
+  }
+  .wrapper .search-box{
+    max-width: calc(100% - 70px);
+  }
+  .wrapper .search-box .go-icon{
+    width: 30px;
     right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+  }
+  .wrapper .search-box input{
+    padding-right: 30px;
+  }
 }
 
-.para{
-    line-height: 1.6rem;
-    color: #718096;
-    font-size: 1.1rem;
+.dummy-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  z-index: -1;
+  padding: 0 20px;
+  text-align: center;
+  transform: translate(-50%, -50%);
 }
-
-.sect{
-    padding-bottom: 2rem;
-}
-
-.timeline{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.tl-title{
-    letter-spacing: 1px;
-    font-size: 1.3rem;
-    color: #002333;
-    text-transform: uppercase;
-}
-.tl-title-2{
-    letter-spacing: 1px;
-    font-size: 1.3rem;
-    color: #2D9CDB;
-    text-transform: uppercase;
-}
-
-.tl-content{
-    border-left: 1px solid #ccc;
-    padding-left: 2rem;
-    position: relative;
-    padding-bottom: 2rem;
-}
-
-.tl-title-2::before{
-    content: "";
-    position: absolute;
-    width: .7rem;
-    height: .7rem;
-    background-color: #2D9CDB;
-    border-radius: 50%;
-    transform: translateX(-50%);
-    left: 0;
-}
-
-/*Media Querries*/
-@media screen and (max-width:823px){
-    .right-title::after{
-        width: 40%;
-    }
-}
-@media screen and (max-width:681px){
-    .right-title::after{
-        width: 30%;
-    }
-}
-@media screen and (max-width:780px){
-    .timeline{
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-@media screen and (max-width:780px){
-    .left-section{
-        grid-column: span 3;
-    }
-    .right-section{
-        grid-column: span 4;
-    }
-}
-@media screen and (max-width:1200px){
-    .main-content{
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .profile img{
-        width: 40%;
-    }
-}
-@media screen and (max-width:700px){
-    .profile img{
-        width: 60%;
-    }
-}
-@media screen and (max-width:390px){
-    .name{
-        font-size: 1.5rem;
-    }
+.dummy-text h2{
+  font-size: 45px;
+  margin: 5px 0;
 }
